# ElliFit

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  ellifit.h  ellipse.h  main.cpp
